test/errors/function_no_body.li
# Test for function declaration with no body - should be semantic error
fn functionWithNoBody()
